# todos-rust

./: LICENSE
rs/: Cargo.toml
rs/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
rs/src/: main.rs
rs/src/_tests/: model_db.rs  model_todo.rs
rs/src/model/: db.rs  mod.rs  todo.rs
www/: package.json
