[package]
name = "todo-rust"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

warp = "0.3"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
sqlb = "0.0.7"